@@ -482,6 +482,7 @@ New features:
 ..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)
 
 Bug fixes:
+...G...PS. [ZBX-16239] fixed compilation warining related to prototypes of module API functions (viktors)
 .......PS. [ZBX-16256] eliminated possible infinite fetch loop with OracleDB (viktors)
 ..F....... [ZBX-15343] fixed JS memory leak in hintboxes in graph widget (Ivo)
 ..F....... [ZBX-16329] fixed duplicate value checking in trigger action conditions (Ivo)
